--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 </head>
 
 <body>
+  <h1>Автоподбор</h1>
+  <div>
+    <a href="registration.html" target="_blank">Регистрация</a>
+  </div>
+
+  <div>
+    <a href="authorization.html" target="_blank">Авторизация</a>
+  </div>
+
+  <div>
+    <a href="search.html" target="_blank">Поиск</a>
+  </div>
 
 </body>
 
