создал в файле авторизации поля

--- a/authorization.html
+++ b/authorization.html
@@ -9,6 +9,37 @@
 </head>
 
 <body>
+  <form action="https://tests.fomenko.top/echo/index.php" method="post">
+    <div>
+
+      <h1>Авторизация</h1>
+
+      <div>
+        <label for="email">Введите Ваш имейл</label>
+        <input id="email" type="email" name="email" placeholder="Введите вашу почту" required>
+      </div>
+
+      <div>
+        <label for="password">Введите Ваш пароль</label>
+        <input id="password" type="password" name="password" placeholder="Введите пароль" required>
+      </div>
+
+      <div>
+        <label for="savepassword">Сохранить пароль</label>
+        <input type="checkbox" name="savepassword" id="savepassword" required>
+      </div>
+
+      <div>
+        <input type="submit" value="Войти">
+        <input type="reset" value="Отменить">
+      </div>
+
+    </div>
+  </form>
+
+  <div>
+    <a href="../index.html">Главная</a>
+  </div>
 
 </body>
 
