--- a/registration.html
+++ b/registration.html
@@ -39,7 +39,7 @@
       </div>
 
       <div>
-        <a href="../index.html">Главная</a>
+        <a href="index.html">Главная</a>
       </div>
 
     </div>
